chore<formatter>: eslint 프리티어 오류 해결

--- a/.eslintrc
+++ b/.eslintrc
@@ -3,58 +3,23 @@
     "browser": true,
     "es2021": true
   },
-  "parser": "@typescript-eslint/parser",
-  "parserOptions": { "project": "./tsconfig.json" },
-  "plugins": ["@typescript-eslint", "prettier"],
   "extends": [
-    "airbnb",
-    "airbnb/hooks",
-    "plugin:prettier/recommended",
+    "eslint:recommended",
+    "plugin:@typescript-eslint/eslint-recommended",
     "plugin:@typescript-eslint/recommended",
-    "prettier"
+    "plugin:@typescript-eslint/recommended-requiring-type-checking",
+    "plugin:prettier/recommended"
   ],
-  "rules": {
-    "no-var": "warn",
-    "eqeqeq": "warn",
-    "react/prop-types": 0,
-    "no-extra-semi": "error",
-    "no-param-reassign": "warn",
-    "react/require-default-props": "off",
-    "react/jsx-filename-extension": [2, { "extensions": [".js", ".jsx", ".ts", ".tsx"] }], // jsx 파일 확장자 .jx, .jsx, .ts, .tsx 허용
-    "no-unused-vars": "off",
-    "@typescript-eslint/no-unused-vars": "error",
-    "import/prefer-default-export": ["off"],
-    "react-hooks/exhaustive-deps": ["off"],
-    "react/jsx-pascal-case": "warn",
-    "react/jsx-key": "warn",
-    "no-debugger": "off",
-    "prettier/prettier": ["error", { "endOfLine": "auto" }],
-    "react/function-component-definition": [
-      2,
-      { "namedComponents": ["arrow-function", "function-declaration"] }
-    ],
-    "react/react-in-jsx-scope": 0,
-    "react/prefer-stateless-function": 0,
-    "react/jsx-one-expression-per-line": 0,
-    "no-nested-ternary": 0,
-    "react/jsx-curly-brace-presence": ["error", { "props": "never", "children": "never" }],
-    "import/no-unresolved": ["error", { "caseSensitive": false }],
-    "react/jsx-props-no-spreading": [1, { "custom": "ignore" }],
-    "linebreak-style": 0,
-    "import/extensions": 0,
-    "no-use-before-define": 0,
-    "import/no-extraneous-dependencies": 0,
-    "no-shadow": 0,
-    "jsx-a11y/no-noninteractive-element-interactions": 0,
-    "jsx-a11y/click-events-have-key-events": "off",
-    "@typescript-eslint/no-explicit-any": "off"
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "ecmaFeatures": {
+      "jsx": true
+    },
+    "ecmaVersion": 12,
+    "sourceType": "module",
+    "project": "./tsconfig.json"
   },
-  "settings": {
-    "import/resolver": {
-      "typescript": {},
-      "node": {
-        "extensions": [".js", ".jsx", ".ts", ".tsx"]
-      }
-    }
-  }
+  "plugins": ["react", "@typescript-eslint"],
+  "ignorePatterns": ["dist/", "node_modules/"],
+  "rules": {}
 }
