--- a/.prettierrc
+++ b/.prettierrc
@@ -2,9 +2,10 @@
   "printWidth": 100,
   "tabWidth": 2,
   "useTabs": false,
-  "semi": true,
   "singleQuote": true,
+  "quoteProps": "as-needed",
   "trailingComma": "all",
-  "endOfLine": "lf",
-  "arrowParens": "always"
+  "bracketSpacing": true,
+  "arrowParens": "avoid",
+  "endOfLine": "lf"
 }
