--- a/package.json
+++ b/package.json
@@ -25,21 +25,19 @@
   },
   "devDependencies": {
     "@types/node": "^20.11.19",
-    "@types/react": "^18.2.55",
+    "@types/react": "^18.2.73",
     "@types/react-dom": "^18.2.19",
     "@typescript-eslint/eslint-plugin": "^7.4.0",
     "@typescript-eslint/parser": "^7.4.0",
     "eslint": "^8.57.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-airbnb-typescript": "^18.0.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.1.3",
     "typescript": "^5.3.3"
   },
   "eslintConfig": {
     "extends": [
-      "airbnb",
-      "airbnb-typescript",
       "prettier"
     ],
     "parser": "@typescript-eslint/parser",
