--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           ref: ${{ github.head_ref }}
 
-      - name: 'npm Build'
+      - name: 'npm build'
         run: |
           npm install
           npm run build
@@ -27,4 +27,4 @@ jobs:
           AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET_NAME }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_S3_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_S3_SECRET_ACCESS_KEY_ID }}
-          SOURCE_DIR: 'build'
+          SOURCE_DIR: 'public'
