--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: build and deploy app
 on:
   push:
     branches:
-      - main
+      - build-test
 
 jobs:
   build:
@@ -14,11 +14,10 @@ jobs:
         with:
           ref: ${{ github.head_ref }}
 
-      - name: 'npm install'
-        run: npm install
-
-      - name: 'npm Build'
-        run: npm run build
+      - name: 'npm build'
+        run: |
+          npm install
+          npm run build
 
       - name: 'Deploy to S3'
         uses: jakejarvis/s3-sync-action@master
@@ -28,4 +27,4 @@ jobs:
           AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET_NAME }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_S3_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_S3_SECRET_ACCESS_KEY_ID }}
-          SOURCE_DIR: 'build'
+          SOURCE_DIR: 'public'
